[workspace]
members=[
    "my_proc_macro",
    "non_proc_macro",
    "etudes",
    "common",
    "two_sum",
    "add_two_numbers",
    "Longest_Substring_Without_Repeating_Characters",
    "Median_of_Two_Sorted_Arrays",
    "Longest_Palindromic_Substring",
    "ZigZag_Conversion",
    "Reverse_Integer",
    "String_to_Integer",
    "Palindrome_Number",
    "Regular_Expression_Matching",
    "n011_Container_With_Most_Water",
    "n012_Integer_to_Roman",
    "n013_Roman_to_Integer",
    "n014_Longest_Common_Prefix",
    "n015_3Sum",
    "n016_3Sum_Closest",
    "n017_Letter_Combinations_of_a_Phone_Number",
    "n018_4Sum",
    "n019_Remove_Nth_Node_From_End_of_List",
    "n020_Valid_Parentheses",
    "n021_Merge_Two_Sorted_Lists",
    "n022_Generate_Parentheses",
    "n023_Merge_k_Sorted_Lists",
    "n024_Swap_Nodes_in_Pairs",
    "n025_Reverse_Nodes_in_k_Group",
    "n026_Remove_Duplicates_from_Sorted_Array",
    "n027_Remove_Element",
    "n028_Implement_strStr",
    "n029_Divide_Two_Integers",
    "n030_Substring_with_Concatenation_of_All_Words",
    "n031_Next_Permutation",
    "n032_Longest_Valid_Parentheses",
    "n033_Search_in_Rotated_Sorted_Array",
    "n034_Find_First_and_Last_Position_of_Element_in_Sorted_Array",
    "n035_Search_Insert_Position",
    "n036_Valid_Sudoku",
    "n037_Sudoku_Solver",
    "n038_Count_and_Say",
    "n039_Combination_Sum"
    ]